--- a/docroot/themes/custom/vagovclaro/assets/scss/wysiwyg.scss
+++ b/docroot/themes/custom/vagovclaro/assets/scss/wysiwyg.scss
@@ -8,6 +8,13 @@
   color: #323a45;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 15px;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 
   @include va-basic-styling;
+}
+
+.ck-content {
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
